# kappalogic

./: .gitignore  README.md  TODO.md  desktop.ini  dev_notes.md  pyproject.toml
examples/: abel_forced_fixed_point_demo.py  anderson_transition_demo.py  bcs_superconductivity_demo.py  color_and_disorder_demo.py  criticality_survey_demo.py  disorder_kills_both_demo.py  disordered_material_demo.py  heat_equation_demo.py  infinite_well_demo.py  karnaugh_fusion_benchmark.py  linear_scaling_dft_demo.py  magnetism_demo.py  order_dependent_firing_demo.py  quantum_measurement_demo.py  sat_3var_demo.py  thouless_window_demo.py  transport_demo.py
kappalogic/: __init__.py  applications.py  bridge.py  core.py  criticality.py  disorder.py  dynamics.py  electronic_structure.py  field_theory.py  funcs.py  gauge.py  heat.py  identities.py  info_theory.py  inverse_design.py  kernels.py  magnetism.py  matrix_backend.py  optics.py  partition.py  physics_bridge.py  quantum_logic.py  quantum_well.py  search.py  spacetime.py  stat_mech.py  superconductivity.py  theory.py  topology.py  torch_backend.py  transport.py
papers/: or_n_fold_order_dependence.md  or_n_safety_theorem.md
tests/: test_kappalogic.py  test_v02_features.py  test_v04_crossdomain.py  test_v05_bridge_dft.py  test_v07_theory.py  test_v11_dynamics.py  test_v13_identities_and_or.py  test_v14_gauge.py  test_v15_bridge.py  test_v16_fusion_bound_fix.py  test_v17_or_log_resonance.py  test_v18_torch_backend.py  test_v19_or_misclassification.py  test_v20_or_n_misclassification.py  test_v21_mod_delta.py  test_v22_integral_forms.py  (+62 more)
(+10 files in other folders)
