[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kappalogic"
version = "0.80.0"
description = "tanh(x/xi)ベースの擬連続論理ゲート・比較演算子ライブラリ"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy", "scipy", "sympy"]

[project.optional-dependencies]
torch = ["torch"]

[tool.setuptools.packages.find]
include = ["kappalogic*"]
